fix linter issues

--- a/tox.ini
+++ b/tox.ini
@@ -55,7 +55,7 @@ deps =
     pylint
 
 commands =
-    pylint --fail-under 9.8 --disable=C0301,C0114 python_server/
+    pylint --fail-under 9.8 --disable=C0301,C0114,R0903 python_server/
 
 
 [testenv:mypy]
